--- a/style.css
+++ b/style.css
@@ -6,8 +6,23 @@
     height: 100vh;
     background-image: url('./img/ocean.jpg');
     background-size: cover;
+    animation-duration: 8s;
+    animation-name: fonas;
+    filter: brightness(50%)
 }
 
+@keyframes fonas{
+    from{
+        filter: brightness(100%)
+
+    }
+    to{
+        filter: brightness(50%)
+
+    }
+}
+
+ 
 .saule {
 width: 75px;
 height: 75px;
@@ -34,3 +49,37 @@ animation-name: saulelydis;
         left: 80%;
     }
 }
+
+.laivas {
+
+    background-image: url('./img/boat.png');
+    
+    width: 100px;
+    height: 100px;
+    background-attachment: absolute;
+    background-size: cover;
+    opacity: 100%;
+    /* background-color: yellow; */
+    position: absolute; 
+    /* arba position: absolute */
+    /* šita pozicija gryš, kai animacija baigsis */
+    top: 40%;
+    left: 0%;
+    animation-duration: 8s;
+    animation-name: plaukia;
+}
+    /* pavadinimas turi sutapti su keyframe */
+    @keyframes plaukia{
+        from{
+            opacity: 100;
+            top: 40%;
+            left: 0%;
+        }
+        to{
+            opacity: 1;
+            top: 40%;
+            left: 80%;
+            width: 380px;
+            height: 380px;
+        }
+    }
