--- a/style.css
+++ b/style.css
@@ -22,7 +22,12 @@
     }
 }
 
- 
+
+
+
+
+
+
 .saule {
 width: 75px;
 height: 75px;
@@ -50,10 +55,61 @@ animation-name: saulelydis;
     }
 }
 
-.laivas {
+.croco1 {
+    background-image: url('./img/croco1.png');
+    width: 300px;
+    height: 200px;
+    position: relative;
+    /* background-attachment: absolute; */
+    background-repeat: no-repeat;
+    background-size: contain;
+    top: 65%;
+    left: 3%;
+    }
 
+    .croco1:hover {
+        background-image: url('./img/croco2.png');
+        width: 1200px;
+        height: 1000px;
+        position: relative;
+        background-repeat: no-repeat;
+        background-size: contain;
+        top: 0%;
+        left: 0%;
+        transition: margin-left 2s .5s;
+        }
+
+.croco3 {
+    background-image: url('./img/croco3.png');
+    width: 300px;
+    height: 200px;
+    position: relative;
+    /* background-attachment: absolute; */
+    background-repeat: no-repeat;
+    background-size: contain;
+    top: 32%;
+    left: 20%;
+    animation-duration: 8s;
+    animation-name: croco3;
+    animation-delay: 8s;
+/* pavadinimas turi sutapti su keyframe */
+}
+
+@keyframes croco3{
+    from{
+        opacity: 1;
+        top: 32%;;
+        left: 20%;
+    }
+    to{
+        opacity: 100;
+        top: 32%;
+        left: 80%;
+    }
+}
+
+.laivas {
     background-image: url('./img/boat.png');
-    
     width: 100px;
     height: 100px;
     background-attachment: absolute;
@@ -66,6 +122,7 @@ animation-name: saulelydis;
     top: 40%;
     left: 0%;
     animation-duration: 8s;
+    animation-fill-mode: forwards;
     animation-name: plaukia;
 }
     /* pavadinimas turi sutapti su keyframe */
